--- a/html/boards.html
+++ b/html/boards.html
@@ -34,6 +34,25 @@
 		    </ul>
 		</nav>
 
+
+		<nav class="navbar navbar-fixed-right" role="navigation">
+			<div style="width: 300px; margin-left:40%; margin-top:10px;">
+            <div class="input-group custom-search-form">
+            <input type="text" class="form-control" ng-model="searchTaskKey" ng-keyup="searchTaskInputEvent($event)" autocomplete="off">
+            <span class="input-group-btn">
+            <button class="btn btn-default" type="button">
+            <span class="glyphicon glyphicon-search"></span>
+            </button>
+            </span>
+            </div>
+            <ul style="padding:0; position: absolute; z-index: 3; list-style-type: none; width:300px; max-height: 400px; overflow:auto;">
+			<li ng-repeat="searchTaskResult in searchTaskResults"><button type="button" ng-click="navigateToTask(searchTaskResult.board, searchTaskResult._id)" style="height:40px; width:300px; background-color:white; outline: none; border: none; box-shadow: rgba(0, 0, 0, 0.3) 0 1px 3px; background-color: #F7F7F7;">{{searchTaskResult.title}}</button></li>
+			</ul>
+         </div>
+    	</nav>
+
+
+
 		<!-- Button trigger modal -->
 		<button type="button" class="create-board-button" data-toggle="modal" data-target="#createBoardPopup">
         	<i class="glyphicon glyphicon-plus"></i>  <i class="glyphicon glyphicon-th-large"></i>
