--- a/html/team.html
+++ b/html/team.html
@@ -9,24 +9,30 @@
 		        <span class="menu-icon"></span>
 		    </div>
 	        <ul class="navbar-menu animate">
-	            <li>
-	                <a ng-href="/#/boards" class="animate">
-	                    <span class="desc animate"> Boards </span>
-	                    <span class="glyphicon glyphicon-th"></span>
-	                </a>
-	            </li>
-	            <li>
-	                <a href="/#/team" class="animate">
-	                    <span class="desc animate"> Team </span>
-	                    <span class="glyphicon glyphicon-user"></span>
-	                </a>
-	            </li>
-	            <li>
-	                <a href="/#/contact-us" class="animate">
-	                    <span class="desc animate"> How To Reach Us </span>
-	                    <span class="glyphicon glyphicon-comment"></span>
-	                </a>
-	            </li>
+		        <li>
+		            <a ng-href="/#/boards" class="animate">
+		                <span class="desc animate"> Boards </span>
+		                <span class="glyphicon glyphicon-th"></span>
+		            </a>
+		        </li>
+		        <li>
+		            <a href="/#/team" class="animate">
+		                <span class="desc animate"> Team </span>
+		                <span class="glyphicon glyphicon-user"></span>
+		            </a>
+		        </li>
+		        <li>
+		            <a href="/#/report" class="animate">
+		                <span class="desc animate"> Report </span>
+		                <span class="glyphicon glyphicon-list"></span>
+		            </a>
+		        </li>
+		        <li>
+		            <a href="" class="animate" ng-click="logout()">
+		                <span class="desc animate"> Logout </span>
+		                <span class="glyphicon glyphicon-arrow-left"></span>
+		            </a>
+		        </li>
 	        </ul>
 		</nav>
 		<!-- -->
